fix artwork blog spacing

--- a/web/assets/css/post.css
+++ b/web/assets/css/post.css
@@ -107,7 +107,7 @@
 /* artwork blog post */
 
 .artwork-blog {
-  margin-top: -25px;
+  margin-bottom: 45px;
 }
 
 .artwork-blog__text {
@@ -115,4 +115,6 @@
   text-align: left;
   font-weight: 300;
   letter-spacing: 8%;
+
+  margin-top: -25px;
 }
